2nd time commmit

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
                 <br class="hidden lg:inline">
                 <span class="text-indigo-500">Take advantage of it</span> </h1>
             <p class="mt-2 text-gray-600 sm:mt-4 sm:text-xl">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                Lorem Ipsum has been the industry's standard   text ever since the 1500s.</p>
         <div class="mt-4 sm:mt-6 ">
             <a class="bg-indigo-500 text-white px-5 py-3 rounded-lg inline-block shadow-lg uppercase 
             tracking-wider font-semibold text-sm sm:text-base hover:bg-indigo-400 focus:outline-none focus:ring focus:ring-offset-purple-50" href="#" > Book Your Escape</a>
