--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
             <h1 class="mt-6 text-2xl font-bold text-gray-900 sm:mt-8 sm:text-4xl lg:text-3xl xl:text-3xl" >You can work from anywhere.
                 <br class="hidden lg:inline">
                 <span class="text-indigo-500">Take advantage of it</span> </h1>
-            <p class="mt-2 text-gray-600 sm:mt-4 sm:text-xl">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+            <p class="mt-2 text-gray-600 sm:mt-4 sm:text-xl">Lorem   is simply dummy text of the printing and typesetting industry. 
                 Lorem Ipsum has been the industry's standard   text ever since the 1500s.</p>
         <div class="mt-4 sm:mt-6 ">
             <a class="bg-indigo-500 text-white px-5 py-3 rounded-lg inline-block shadow-lg uppercase 
